--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@stitches/react": "^0.1.9",
-    "@types/styled-components": "^5.1.9",
+    "@stitches/react": "0.1.9",
+    "@types/styled-components": "5.1.9",
+    "nanoid": "^3.1.23",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
