--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@stitches/core": "0.1.9",
     "@stitches/react": "0.1.9",
+    "@radix-ui/colors": "^0.1.6",
     "@types/styled-components": "5.1.9",
     "nanoid": "^3.1.23",
     "next": "10.2.0",
