--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.0",
+    "@radix-ui/colors": "^0.1.6",
     "@stitches/core": "0.1.9",
     "@stitches/react": "0.1.9",
-    "@radix-ui/colors": "^0.1.6",
     "@types/styled-components": "5.1.9",
     "nanoid": "^3.1.23",
     "next": "10.2.0",
@@ -19,6 +20,7 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@emotion/styled": "^11.3.0",
     "@types/react": "^17.0.5",
     "typescript": "^4.2.4"
   }
