--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@radix-ui/colors": "^0.1.6",
-    "@stitches/core": "0.1.9",
-    "@stitches/react": "0.1.9",
-    "@types/styled-components": "5.1.9",
+    "@stitches/core": "0.2.0-canary.0",
+    "@stitches/core-v019": "npm:@stitches/core@0.1.9",
+    "@stitches/react": "0.2.0-canary.0",
+    "@stitches/react-alpha": "npm:@stitches/react@0.0.3-canary.4",
+    "@stitches/react-v019": "npm:@stitches/react@0.1.9",
+    "d3-scale-chromatic": "^2.0.0",
     "nanoid": "^3.1.23",
-    "next": "10.2.0",
+    "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
@@ -22,6 +25,7 @@
   "devDependencies": {
     "@emotion/styled": "^11.3.0",
     "@types/react": "^17.0.5",
+    "@types/styled-components": "5.1.9",
     "typescript": "^4.2.4"
   }
 }
