--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.4.0",
+    "@phntms/css-components": "^0.2.0",
     "@radix-ui/colors": "^0.1.6",
     "@stitches/core-v025": "npm:@stitches/core@0.2.5",
     "@stitches/core-vc17": "npm:@stitches/core@1.0.0-canary.17",
@@ -17,14 +18,15 @@
     "@stitches/stringify": "^0.2.5",
     "d3-scale-chromatic": "^2.0.0",
     "nanoid": "^3.1.23",
-    "next": "10.2.3",
+    "next": "12.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@emotion/styled": "^11.3.0",
-    "@types/react": "^17.0.5",
+    "@types/node": "^18.11.9",
+    "@types/react": "^17.0.2",
     "@types/styled-components": "5.1.9",
     "typescript": "^4.2.4"
   }
