Unify Stitches benchmarking down to one

--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "@emotion/react": "^11.4.0",
     "@phntms/css-components": "^0.2.0",
     "@radix-ui/colors": "^0.1.6",
-    "@stitches/core-v025": "npm:@stitches/core@0.2.5",
-    "@stitches/core-vc17": "npm:@stitches/core@1.0.0-canary.17",
-    "@stitches/react-v025": "npm:@stitches/react@0.2.5",
-    "@stitches/react-vc17": "npm:@stitches/react@1.0.0-canary.17",
+    "@stitches/react": "^1.2.8",
     "@stitches/stringify": "^0.2.5",
     "d3-scale-chromatic": "^2.0.0",
     "nanoid": "^3.1.23",
