--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stitches/react-v025": "npm:@stitches/react@0.2.5",
     "@stitches/react-vc17": "npm:@stitches/react@1.0.0-canary.17",
     "@stitches/stringify": "^0.2.5",
+    "@vanilla-extract/css": "^1.11.0",
     "d3-scale-chromatic": "^2.0.0",
     "nanoid": "^3.1.23",
     "next": "10.2.3",
@@ -26,6 +27,7 @@
     "@emotion/styled": "^11.3.0",
     "@types/react": "^17.0.5",
     "@types/styled-components": "5.1.9",
+    "@vanilla-extract/next-plugin": "^2.1.2",
     "typescript": "^4.2.4"
   }
 }
